Add service-specific outbound public ACL rules

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -20,9 +20,6 @@ Parameters:
   Ec2ResourceTaggerServiceToken: { Type: String }
   SharedVpcCidrBlock: { Type: String }
 
-Conditions:
-  IsProduction: !Equals [!Ref EnvironmentType, Production]
-
 Resources:
   Vpc:
     Type: AWS::EC2::VPC
@@ -83,6 +80,8 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         VpcId: !Ref Vpc
+        VpcCidrBlock: !GetAtt Vpc.CidrBlock
+        VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
