--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -10,6 +10,8 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
+  VpcCidrBlock: { Type: String }
+  VpcIpv6CidrBlocks: { Type: CommaDelimitedList }
 
 Resources:
   PublicNetworkAcl:
@@ -227,6 +229,208 @@ Resources:
       Protocol: 6
       RuleAction: allow
       RuleNumber: 61
+
+  # EGRESS 200
+  # Allows outbound MySQL and Aurora traffic to IPs within the VPC (e.g., an
+  # application on one of our EC2 instances connecting to its Aurora database
+  # in the same VPC)
+  OutboundIpV4MysqlNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 3306
+        To: 3306
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 200
+  OutboundIpV6MysqlNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 3306
+        To: 3306
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 201
+
+  # EGRESS 210
+  # Allows outbound PostgreSQL traffic to IPs within the VPC (e.g., an
+  # application on one of our EC2 instances connecting to its PostgreSQL
+  # database in the same VPC)
+  OutboundIpV4PostgresqlNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 5432
+        To: 5432
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 210
+  OutboundIpV6PostgresqlNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 5432
+        To: 5432
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 211
+
+  # EGRESS 220
+  # Allows outbound Redis traffic to IPs within the VPC (e.g., an application
+  # on one of our EC2 instances connecting to a Redis cluster in the same VPC)
+  OutboundIpV4RedisNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 6379
+        To: 6379
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 220
+  OutboundIpV6RedisNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 6379
+        To: 6379
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 221
+
+  # EGRESS 230
+  # Allows outbound memcached traffic to IPs within the VPC (e.g., an
+  # application on one of our EC2 instances connecting to a memcached instances
+  # in the same VPC)
+  OutboundIpV4MemcachedNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 11211
+        To: 11211
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 230
+  OutboundIpV6MemcachedNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 11211
+        To: 11211
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 231
+
+  # EGRESS 240
+  # Allows outbound Elasticsearch traffic to IPs within the VPC (e.g., an
+  # application on one of our EC2 instances connecting to an Elasticsearch
+  # domian in the same VPC)
+  OutboundIpV4ElasticsearchNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 9200
+        To: 9200
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 240
+  OutboundIpV6ElasticsearchNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 9200
+        To: 9200
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 241
+
+  # EGRESS 250
+  # Allows outbound Sphinx traffic to IPs within the VPC (e.g., an
+  # application on one of our EC2 instances connecting to an Sphinx server in
+  # the same VPC)
+  OutboundIpV4SphinxNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 9312
+        To: 9312
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 250
+  OutboundIpV6SphinxNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 9312
+        To: 9312
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 251
+
+  # EGRESS 260
+  # Allows outbound Solr traffic to IPs within the VPC (e.g., an
+  # application on one of our EC2 instances connecting to an Solr server in
+  # the same VPC)
+  OutboundIpV4SolrNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 8983
+        To: 8983
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 260
+  OutboundIpV6SolrNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 8983
+        To: 8983
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 261
 
   # EGRESS 300
   # Allows outbound HTTPS web requests originating from hosts within the VPC
