Disable unused prod kinesis triggers

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -216,7 +216,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 100
-      Enabled: !If [IsStaging, false, true]
+      Enabled: false
       EventSourceArn: !Ref MetricsKinesisStream
       FunctionName: !Ref AnalyticsBigqueryLambdaFunction
       StartingPosition: "LATEST"
@@ -232,7 +232,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 25
-      Enabled: !If [IsStaging, false, true]
+      Enabled: false
       EventSourceArn: !Ref MetricsKinesisStream
       FunctionName: !Ref AnalyticsPingbacksLambdaFunction
       StartingPosition: "LATEST"
@@ -240,7 +240,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 100
-      Enabled: !If [IsStaging, false, true]
+      Enabled: false
       EventSourceArn: !Ref MetricsKinesisStream
       FunctionName: !Ref AnalyticsRedisLambdaFunction
       StartingPosition: "LATEST"
