Move someNetworks env vars into task def

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -253,16 +253,34 @@ Resources:
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
-            - Name: SPHINX_SERVER
-              Value: !GetAtt Constants.VanityNlbDomain
-            - Name: SPHINX_PORT
+            - Name: SPHINX_SERVER # TODO Remove from secrets
+              Value: !If
+                - IsProduction
+                - sphinx.prx.tech
+                - !GetAtt Constants.VanityNlbDomain
+            - Name: SPHINX_PORT # TODO Remove from secrets
               Value: !Ref kSphinxPort
-            - Name: SPHINX_BASE_URL
-              Value: !GetAtt Constants.SphinxBaseUrl
+            - Name: SPHINX_BASE_URL # TODO Remove from secrets
+              Value: !If
+                - IsProduction
+                - https://sphinx.prx.tech/
+                - !GetAtt Constants.SphinxBaseUrl
+            - Name: SPHINX_BIN # TODO Remove from secrets
+              Value: /usr/local/bin
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: !Ref SharedAuroraMysqlPort
+            - Name: DATABASE_POOL_SIZE # TODO Remove from secrets
+              Value: "5"
+            - Name: LOG_LEVEL # TODO Remove from secrets
+              Value: !If [IsProduction, INFO, DEBUG]
+            # - Name: PRX_API_BASE_URL # TODO Remove from secrets
+            #   Value: !If [IsProduction, INFO, DEBUG]
+            - Name: RAILS_LOG_STDOUT # TODO Remove from secrets
+              Value: "true"
+            - Name: RAILS_PORT # TODO Remove from secrets
+              Value: !Ref kWebApplicationPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -563,6 +581,9 @@ Resources:
             - web
           Cpu: !If [IsProduction, 200, 128]
           Environment:
+            - Name: LOCAL_SPHINX
+              Value: "true"
+            #####
             - Name: APP_NAME
               Value: networks
             - Name: APP_ENV
@@ -581,18 +602,34 @@ Resources:
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
-            - Name: SPHINX_SERVER
-              Value: !GetAtt Constants.VanityNlbDomain
-            - Name: SPHINX_PORT
+            - Name: SPHINX_SERVER # TODO Remove from secrets
+              Value: !If
+                - IsProduction
+                - sphinx.prx.tech
+                - !GetAtt Constants.VanityNlbDomain
+            - Name: SPHINX_PORT # TODO Remove from secrets
               Value: !Ref kSphinxPort
-            - Name: SPHINX_BASE_URL
-              Value: !GetAtt Constants.SphinxBaseUrl
-            - Name: LOCAL_SPHINX
-              Value: "true"
+            - Name: SPHINX_BASE_URL # TODO Remove from secrets
+              Value: !If
+                - IsProduction
+                - https://sphinx.prx.tech/
+                - !GetAtt Constants.SphinxBaseUrl
+            - Name: SPHINX_BIN # TODO Remove from secrets
+              Value: /usr/local/bin
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: !Ref SharedAuroraMysqlPort
+            - Name: DATABASE_POOL_SIZE # TODO Remove from secrets
+              Value: "5"
+            - Name: LOG_LEVEL # TODO Remove from secrets
+              Value: !If [IsProduction, INFO, DEBUG]
+            # - Name: PRX_API_BASE_URL # TODO Remove from secrets
+            #   Value: !If [IsProduction, INFO, DEBUG]
+            - Name: RAILS_LOG_STDOUT # TODO Remove from secrets
+              Value: "true"
+            - Name: RAILS_PORT # TODO Remove from secrets
+              Value: !Ref kWebApplicationPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
