--- a/stacks/container-apps/networks.prx.org.yml
+++ b/stacks/container-apps/networks.prx.org.yml
@@ -296,7 +296,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [CreateProductionResources, !Ref DesiredWebsProduction, !Ref DesiredWebs]
+      DesiredCount: 0
       LoadBalancers:
         - ContainerName: !Sub ${AppName}-web
           ContainerPort: !Ref ContainerPort
@@ -393,7 +393,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [CreateProductionResources, !Ref DesiredWorkersProduction, !Ref DesiredWorkers]
+      DesiredCount: 0
       Tags:
         - Key: Project
           Value: !Ref AppName
