Turn off old Sphinx in staging

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -582,7 +582,7 @@ Resources:
           Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: LOCAL_SPHINX
-              Value: "true"
+              Value: "true" # Makes the image act as a Sphinx server
             #####
             - Name: APP_NAME
               Value: networks
