Turn off Networks stacks in staging

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -172,6 +172,7 @@ Resources:
       TimeoutInMinutes: 5
   NetworksStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
@@ -216,6 +217,7 @@ Resources:
       TimeoutInMinutes: 5
   SphinxStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
