--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -432,6 +432,10 @@ Resources:
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
+            - Name: SPHINX_SERVER
+              Value: sphinx.prx.tech
+            - Name: SPHINX_BASE_URL
+              Value: https://sphinx.prx.tech/
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
