--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -122,6 +122,33 @@ Resources:
       RuleAction: allow
       RuleNumber: 501
 
+  # INGRESS 510
+  # Allows inbound PostgreSQL traffic from all IPs within the VPC
+  InboundIpV4PostgresqlNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 5432
+        To: 5432
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 510
+  InboundIpV6PostgresqlNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 5432
+        To: 5432
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 511
+
   # INGRESS 520
   # Allows inbound Redis traffic from all IPs within the VPC (e.g., an
   # application running on an EC2 instance in the VPC making a request to a
