--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -64,6 +64,8 @@ Resources:
 
   # INGRESS 220
   # Allows inbound user traffic for standard HTTPS web requests from all IPs
+  # (e.g., internet traffic intended for one of our apps that goes through an
+  # ALB on a public subnet).
   InboundIpV4HttpsNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
@@ -91,6 +93,8 @@ Resources:
 
   # INGRESS 230
   # Allows inbound user traffic for insecure HTTP web requests from all IPs
+  # (e.g., internet traffic intended for one of our apps that goes through an
+  # ALB on a public subnet).
   InboundIpV4HttpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
