Use new Sphinx in new prod

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -254,17 +254,11 @@ Resources:
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
             - Name: SPHINX_SERVER # TODO Remove from secrets
-              Value: !If
-                - IsProduction
-                - sphinx.prx.tech
-                - !GetAtt Constants.VanityNlbDomain
+              Value: !GetAtt Constants.VanityNlbDomain
             - Name: SPHINX_PORT # TODO Remove from secrets
               Value: !Ref kSphinxPort
             - Name: SPHINX_BASE_URL # TODO Remove from secrets
-              Value: !If
-                - IsProduction
-                - https://sphinx.prx.tech/
-                - !GetAtt Constants.SphinxBaseUrl
+              Value: !GetAtt Constants.SphinxBaseUrl
             - Name: SPHINX_BIN # TODO Remove from secrets
               Value: /usr/local/bin
             - Name: DB_PORT_3306_TCP_ADDR
