--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -265,6 +265,37 @@ Resources:
       RuleAction: allow
       RuleNumber: 581
 
+  # INGRESS 660
+  # Allows inbound traffic on port 3000 from IPs within the VPC. This is the
+  # port that the Networks search app running along side the Sphinx server
+  # uses. The public Networks web server connects to the search app to trigger
+  # reindexing. The port range for this rule must match kWebApplicationPort in
+  # the Networks app stack.
+  InboundIpV4NetworksAppNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 3000
+        To: 3000
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 660
+  InboundIpV6NetworksAppNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 3000
+        To: 3000
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 661
+
   ##############################################################################
   ##############################################################################
   ##############################################################################
