Flip prod dynamodb lambda

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -358,12 +358,12 @@ Resources:
           DDB_TABLE: !Ref DynamoDbTableName
           DDB_ROLE: !Ref DynamoDbAccessRoleArn
           DDB_TTL: !Ref DynamoDbTtl
-          PROCESS_AFTER: !If [IsStaging, "1634769180", ""]
+          PROCESS_AFTER: !If [IsStaging, "1634769180", "1635261300"]
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 50
-            Enabled: !If [IsStaging, true, false] # TODO
+            Enabled: true
             StartingPosition: LATEST
             Stream: !Ref DynamoDbKinesisStreamArn
           Type: Kinesis
