--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -136,7 +136,7 @@ Resources:
           DDB_TABLE: !Ref DynamodbTableName
           DDB_ROLE: !Ref DynamodbAccessRole
           DDB_TTL: !Ref DynamodbTTL
-          PROCESS_UNTIL: !If [IsStaging, "1634769180", ""]
+          PROCESS_UNTIL: !If [IsStaging, "1634769180", "1635261300"]
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
