Use parameter for health check port

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -394,7 +394,7 @@ Resources:
     DependsOn: Nlb
     Properties:
       HealthCheckIntervalSeconds: 10
-      HealthCheckPort: "3000"
+      HealthCheckPort: !Ref kWebApplicationPort
       HealthyThresholdCount: 3
       Port: 80
       Protocol: TCP
