Fix Networks ingress rule

--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -266,11 +266,9 @@ Resources:
       RuleNumber: 581
 
   # INGRESS 660
-  # Allows inbound traffic on port 3000 from IPs within the VPC. This is the
-  # port that the Networks search app running along side the Sphinx server
-  # uses. The public Networks web server connects to the search app to trigger
-  # reindexing. The port range for this rule must match kWebApplicationPort in
-  # the Networks app stack.
+  # Allows inbound HTTPS traffic from IPs within the VPC to allow traffic to
+  # the Networks search app running along side the Sphinx server, from the
+  # public Networks web server.
   InboundIpV4NetworksAppNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
@@ -278,8 +276,8 @@ Resources:
       Egress: false
       NetworkAclId: !Ref PrivateNetworkAcl
       PortRange:
-        From: 3000
-        To: 3000
+        From: 443
+        To: 443
       Protocol: 6 # TCP
       RuleAction: allow
       RuleNumber: 660
@@ -290,8 +288,8 @@ Resources:
       Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
       NetworkAclId: !Ref PrivateNetworkAcl
       PortRange:
-        From: 3000
-        To: 3000
+        From: 443
+        To: 443
       Protocol: 6 # TCP
       RuleAction: allow
       RuleNumber: 661
