--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -224,7 +224,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 50
-      Enabled: !If [IsStaging, false, true]
+      Enabled: false
       EventSourceArn: !Ref DynamodbKinesisStream
       FunctionName: !Ref AnalyticsDynamodbLambdaFunction
       StartingPosition: "LATEST"
